# muvera

./: .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  pip-install.yml  workflow-summary.yml
bindings/: CMakeLists.txt  pybind_module.cpp
bindings/tests/: pybind_test.py
include/: fde.h  retriever.h
muvera_project/: .gitignore  README.md  setup.py
muvera_project/muvera_pybind/: __init__.py
muvera_pybind/: __init__.py
src/: exact_chamfer_retriever.cpp  fde.cpp  muvera_retriever.cpp  relaxed_chamfer_retriever.cpp
tests/: CMakeLists.txt  fde_test.cpp  retriever_test.cpp
